# Homegear-Velux-KLF200

./: CMakeLists.txt  README.md  configure.ac
debian/: control  rules
misc/Config Directory/: veluxklf200.conf
misc/Device Description Files/: 0080-Roller-Shutter.xml  010X-Window.xml
misc/UI Translations/de-DE/: admin.de-DE.yaml
misc/UI Translations/en-US/: admin.en-US.yaml
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  Makefile.am  Velux.cpp  Velux.h  VeluxCentral.cpp  VeluxCentral.h  VeluxPacket.cpp  VeluxPacket.h  VeluxPeer.cpp  VeluxPeer.h
src/PhysicalInterfaces/: Klf200.cpp  Klf200.h
